WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101358
[WK2] Wrong scroll position when going back in history
https://bugs.webkit.org/show_bug.cgi?id=101358
Summary
[WK2] Wrong scroll position when going back in history
Yael
Reported
2012-11-06 08:34:52 PST
When loading page A, scrolling down, then loading page B, scrolling down, and then going back in history, the scroll position is not preserved. When we go back in history, we send the new visibleContentsRect to the web process, and that turns on the flag wasScrolledByUser. The history controller does not send the saved history scrollPosition, because this flag is set. Looking at it further, I found out that when the load is committed, we are still using the contentsSize of the previous page. Resetting the contentsSize of the page prevents prevents this bug. A patch is coming.
Attachments
Patch
(1.48 KB, patch)
2012-11-06 08:38 PST
,
Yael
kenneth
: review+
Details
Formatted Diff
Diff
Patch for landing.
(1.48 KB, patch)
2012-11-06 10:36 PST
,
Yael
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2012-11-06 08:38:23 PST
Created
attachment 172598
[details]
Patch
Laszlo Gombos
Comment 2
2012-11-06 08:45:36 PST
[EFL] prefix should be probably removed from the bug (title + ChangeLog). It looks good to me.
Yael
Comment 3
2012-11-06 08:55:48 PST
(In reply to
comment #2
)
> [EFL] prefix should be probably removed from the bug (title + ChangeLog). > > It looks good to me.
Perhaps add [Qt] instead? This is not an issue for gtk or mac ports .
Laszlo Gombos
Comment 4
2012-11-06 09:19:02 PST
> Perhaps add [Qt] instead? This is not an issue for gtk or mac ports .
Yes, that is better.
Kenneth Rohde Christiansen
Comment 5
2012-11-06 10:23:50 PST
Comment on
attachment 172598
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=172598&action=review
> Source/WebKit2/ChangeLog:3 > + [EFL][WK2] Wrong scroll position when going back in history
Remove [EFL], as this code can be used be all.
Yael
Comment 6
2012-11-06 10:27:30 PST
(In reply to
comment #5
)
> (From update of
attachment 172598
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=172598&action=review
> > > Source/WebKit2/ChangeLog:3 > > + [EFL][WK2] Wrong scroll position when going back in history > > Remove [EFL], as this code can be used be all.
ok
Yael
Comment 7
2012-11-06 10:36:23 PST
Created
attachment 172615
[details]
Patch for landing.
WebKit Review Bot
Comment 8
2012-11-06 12:45:07 PST
Comment on
attachment 172615
[details]
Patch for landing. Clearing flags on attachment: 172615 Committed
r133659
: <
http://trac.webkit.org/changeset/133659
>
WebKit Review Bot
Comment 9
2012-11-06 12:45:11 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug