[WK2] Wrong scroll position when going back in history https://bugs.webkit.org/show_bug.cgi?id=101358

Patch by Yael Aharon <yael.aharon@intel.com> on 2012-11-06
Reviewed by Kenneth Rohde Christiansen.

Reset the contentsSize after a new load was committed. We should not continue
to use the contentsSize of the previous page in any calculation.

* UIProcess/PageViewportController.cpp:
(WebKit::PageViewportController::didCommitLoad):

Canonical link: https://commits.webkit.org/119471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133659 268f45cc-cd09-0410-ab3c-d52691b4dbfc